ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-devops-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "django.example.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: django-devops-svc
            port:
              number: 8000
